test/tests/stages/15_arrays_and_pointer_arithmetic/invalid_parse/unclosed_nested_initializer.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[38]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(arr)
  [
  const int(2)
  ]
  [
  const int(2)
  ]
  =
  {
  {
  const int(1)
  ,
  const int(2)
  }
  ,
  {
  const int(3)
  ,
  const int(4)
  }
  ;
  return
  identifier(arr)
  [
  const int(0)
  ]
  [
  const int(0)
  ]
  ;
  }
